dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/lib.c)
AC_SUBST(version)
version="2000-12-24"

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL

AC_PROG_CC

AC_SUBST(AS)
AC_SUBST(LD)
AC_SUBST(AR)
AC_SUBST(NM)
AC_SUBST(STRIP)
AC_SUBST(OBJCOPY)
AC_SUBST(OBJDUMP)
AC_SUBST(RANLIB)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

AC_SUBST(network)
AC_MSG_CHECKING(network)
AC_ARG_WITH(network,
[  --with-network=PATH      Network script directory (default /etc/network).
],
[ case "$withval" in
  no)
    AC_MSG_ERROR(Need network dir.)
    ;;
  yes)
    network="/etc/network"
    AC_MSG_RESULT(/etc/network)
    ;;
  *)
    network="$withval"
    AC_MSG_RESULT($withval)
    ;;
  esac ],
  network="/etc/network"
  AC_MSG_RESULT(/etc/network)
)

AC_SUBST(nports)
AC_MSG_CHECKING(nports)
AC_ARG_WITH(nports,
[  --with-nports=NUMBER      Maximum number of serial ports (default 256).
],
[ case "$withval" in
  no)
    AC_MSG_ERROR(Need the number of serial ports.)
    ;;
  yes)
    nports=256
    AC_MSG_RESULT(256)
    ;;
  *)
    nports=$withval
    AC_MSG_RESULT($withval)
    ;;
  esac ],
  nports=256
  AC_MSG_RESULT(256)
)

AC_SUBST(nvlines)
AC_MSG_CHECKING(nvlines)
AC_ARG_WITH(nvlines,
[  --with-nvlines=NUMBER      Maximum number virtual ports (default 256).
],
[ case "$withval" in
  no)
    AC_MSG_ERROR(Need the number virtual ports.)
    ;;
  yes)
    nvlines=256
    AC_MSG_RESULT(256)
    ;;
  *)
    nvlines=$withval
    AC_MSG_RESULT($withval)
    ;;
  esac ],
  nvlines=256
  AC_MSG_RESULT(256)
)

AC_ARG_ENABLE(uptime,
      [  --enable-uptime          enables uptime ],
      uptime=$enableval, uptime=no)

AC_SUBST(uptime_define)
if [[ "$uptime" = "no" ]]; then
  uptime_define="#undef UPTIME"
else
  uptime_define="#define UPTIME \"$uptime\""
fi

AC_SUBST(rundir)
AC_ARG_ENABLE(rundir,
     [  --rundir      specifies directory for pid files etc [/var/run] ],
     rundir=$enableval, rundir="/var/run")

AC_SUBST(CFLAGS)
AC_ARG_ENABLE(syslog,
      [  --enable-syslog          enables usage of a local syslog server ],
	CFLAGS="$CFLAGS -DUSE_SYSLOG_SERVER")

AC_SUBST(etcdir)
AC_ARG_ENABLE(etcdir,
     [  --etcdir      specifies directory for configuration files [/etc/portslave] ],
     etcdir=$enableval, etcdir="/etc/portslave")
AC_SUBST(inst_etcdir)
inst_etcdir='${PREFIX}'$etcdir

AC_SUBST(instdir)
AC_ARG_ENABLE(instdir,
     [  --instdir     specifies base directory for installing programs [/usr] ],
     instdir=$enableval, instdir="/usr")
AC_SUBST(bindir)
AC_ARG_ENABLE(bindir,
     [  --bindir      specifies directory for installing binaries [/bin] ],
     bindir=$enableval, bindir="/bin")
AC_SUBST(inst_bindir)
inst_bindir='${PREFIX}'$bindir
AC_SUBST(sbindir)
AC_ARG_ENABLE(sbindir,
     [  --sbindir     specifies directory for installing system binaries [/sbin] ],
     sbindir=$enableval, sbindir="/sbin")
AC_SUBST(inst_sbindir)
inst_sbindir='${PREFIX}'$sbindir
AC_SUBST(inst_usr_bindir)
inst_usr_bindir='${PREFIX}'$instdir$bindir
AC_SUBST(inst_usr_sbindir)
inst_usr_sbindir='${PREFIX}'$instdir$sbindir

AC_ARG_ENABLE(libdir,
     [  --libdir      specifies lib directory [/lib] ],
     libdir=$enableval, libdir="/lib")
AC_SUBST(inst_libdir)
inst_libdir='${PREFIX}'$libdir

AC_SUBST(route)
AC_PATH_PROG(route, "route", "/sbin/route", "$PATH:/sbin:/usr/sbin")
AC_SUBST(ifconfig)
AC_PATH_PROG(ifconfig, "ifconfig", "/sbin/ifconfig", "$PATH:/sbin:/usr/sbin")
AC_SUBST(arp)
AC_PATH_PROG(arp, "arp", "/usr/sbin/arp", "$PATH:/sbin:/usr/sbin")
AC_SUBST(telnet)
AC_PATH_PROG(telnet, "telnet", "/usr/bin/telnet", "$PATH")
AC_SUBST(ssh)
AC_PATH_PROG(ssh, "ssh", "/usr/bin/ssh", "$PATH")

dnl defined if UT_HOSTSIZE > 23
AC_SUBST(bigutmp)
AC_TRY_COMPILE([#include <utmp.h>
] , [char foo[UT_HOSTSIZE - 23];]
  , bigutmp=yes)
if [[ "$bigutmp" = "yes" ]]; then
  bigutmp="#define HAVE_BIGUTMP"
fi

REV=`uname -r`
MAJOR=`echo "$REV" | cut -f1 -d "."`
MINOR=`echo "$REV" | cut -f2 -d "."`
if [[ $MAJOR -gt 2 ]]; then
    LINUX22="1"
else
    if [[ $MAJOR -lt 2 ]]; then
        LINUX22="0"
    else
        if [[ $MINOR -ge 2 ]]; then
            LINUX22="1"
        else
            LINUX22="0"
        fi
    fi
fi

AC_SUBST(linux22)
if [[ "$LINUX22" = "1" ]]; then
    linux22="#define LINUX22"
fi

AC_SUBST(DSVIEW)
AC_SUBST(DSVIEW_CAP)

AC_OUTPUT(Makefile pslave_cfg.h pslave.conf src/radinit.sh src/auth.c src/rwconf.c)
